--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                   <div class="date">Tuesday 22 December 2020</div>
             </section>
             <div class="current">
-                <div class="temp">15<span>*c</span></div>
+                <div class="temp">15<span>°c</span></div>
                 <div class="weather">Sunny</div>
-                <div class="hi-low">13*c / 16*c</div>
+                <div class="hi-low">13°c / 16°c</div>
             </div>
         </main>
     </div>
